# DistributedDataBase

./: README.md  docker-compose.yml
DB/: CMakeLists.txt  Dockerfile  Makefile  db.cc
client/: CMakeLists.txt  Dockerfile  Makefile  client.cc
server/: CMakeLists.txt  Dockerfile  Makefile  db_interface.hpp  server.cc
server/lib/: ParityCode.hpp
